--- a/DAST_DEV_Pipeline.yml
+++ b/DAST_DEV_Pipeline.yml
@@ -4,7 +4,7 @@ trigger:
 #resources:
 # pipelines:
 # - pipeline: Deploy_App_Pipeline_Trigger
-#   source: Deploy_App_Pipeline
+#   source: dev_pipelines/Deploy_App_Pipeline
 #   project: trackeraks
 #   trigger: true
 
@@ -15,7 +15,7 @@ pool:
 
 variables:
 
-- group: all_variables
+- group: dev_variables
 
 stages:
 - stage: DASTOWASPZAP
