--- a/DAST-Dev.yaml
+++ b/DAST-Dev.yaml
@@ -4,7 +4,7 @@ trigger:
 #resources:
 # pipelines:
 # - pipeline: Deploy_App_Pipeline_Trigger
-#   source: dev-pipelines/Deploy_App_Pipeline
+#   source: Deploy-App-Dev
 #   project: trackeraks
 #   trigger: true
 
